codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__session_limit_footer_right_status.snap
---
source: tui/src/chatwidget/tests/session_limit_footer.rs
assertion_line: 26
expression: "render_bottom_popup(&chat, 80)"
---
› Ask Codex to do anything

  gpt-5.5 default · C:\tmp\project       70% tokens · 5h 25% used 50% reset
