codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__session_limit_footer_with_side_context.snap
---
source: tui/src/chatwidget/tests/session_limit_footer.rs
assertion_line: 54
expression: "render_bottom_popup(&chat, 110)"
---
› Ask Codex to do anything

  gpt-5.5 default · C:\tmp\project             Side from main thread · 70% tokens · 5h 25% used 50% reset
